--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>japanbit - Authentic Japanese Products, Direct from Source</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         * {
             margin: 0;
@@ -35,6 +36,13 @@
             margin-bottom: 0.5rem;
             letter-spacing: -1px;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
+
+        .hero-bg .logo-img {
+            max-width: 300px;
+            height: auto;
+            margin: 0 auto 1rem;
+            display: block;
         }
 
         .hero-bg .logo-subtitle {
@@ -208,6 +216,10 @@
                 font-size: 2.5rem;
             }
 
+            .hero-bg .logo-img {
+                max-width: 200px;
+            }
+
             .hero-bg .hero-tagline {
                 font-size: 1.1rem;
             }
@@ -237,7 +249,7 @@
 </head>
 <body>
     <section class="hero-bg">
-        <div class="logo">japanbit</div>
+        <img src="logo.png" alt="japanbit" class="logo-img">
         <div class="logo-subtitle">Direct from Japan</div>
         <p class="hero-tagline">Authentic Japanese products sourced by a British expat with 17+ years of local knowledge</p>
     </section>
