--- a/index.html
+++ b/index.html
@@ -288,7 +288,10 @@
                 <p>Whether you know exactly what you want or need help exploring what's available, I can help you find it.</p>
                 
                 <div class="contact-info">
-                    <a href="https://www.ebay.com/usr/YOUR_EBAY_USERNAME">Find me on eBay</a>
+                    <p><strong>Richard Bowe</strong></p>
+                    <p>Email: contact@japanbit.com</p>
+                    <p>Nagasaki, Japan</p>
+                    <a href="https://www.ebay.com/usr/malkav-auctions">Find me on eBay</a>
                 </div>
                 
                 <p style="margin-top: 2rem; font-size: 0.9rem;">
